# nu_cmd_lang76

./: Cargo.toml  README.md
crates/nu-cli/: Cargo.toml
crates/nu-cli/src/completions/: completer.rs
crates/nu-cli/tests/support/: completions_helpers.rs
crates/nu-cmd-lang/: Cargo.toml
crates/nu-cmd-lib/: Cargo.toml
crates/nu-cmd-lib/src/: default_context.rs  example_test.rs  lib.rs
crates/nu-cmd-lib/src/viewers/: mod.rs
src/: main.rs
