[package]
authors = ["The Nushell Project Developers"]
default-run = "nu"
description = "A new type of shell"
documentation = "https://www.nushell.sh/book/"
edition = "2021"
exclude = ["images"]
homepage = "https://www.nushell.sh"
license = "MIT"
name = "nu"
repository = "https://github.com/nushell/nushell"
rust-version = "1.60"
version = "0.76.1"

[workspace]
members = [
	"crates/nu-cli",
	"crates/nu-engine",
	"crates/nu-parser",
	"crates/nu-system",
	"crates/nu-cmd-lang",
	"crates/nu-protocol",
	"crates/nu-plugin",
	"crates/nu-utils",
]

[dependencies]
#chrono = { version = "0.4.23", features = ["serde"] }
crossterm = "0.24.0"
ctrlc = "3.2.1"
log = "0.4"
miette = { version = "5.5.0", features = ["fancy-no-backtrace"] }
#nu-ansi-term = "0.46.0"
nu-cli = { path = "./crates/nu-cli", version = "0.76.1" }
#nu-color-config = { path = "./crates/nu-color-config", version = "0.76.1" }
nu-cmd-lang = { path = "./crates/nu-cmd-lang", version = "0.76.1" }
#nu-command = { path = "./crates/nu-command", version = "0.76.1" }
nu-engine = { path = "./crates/nu-engine", version = "0.76.1" }
#nu-json = { path = "./crates/nu-json", version = "0.76.1" }
nu-parser = { path = "./crates/nu-parser", version = "0.76.1" }
nu-path = { path = "./crates/nu-path", version = "0.76.1" }
#nu-plugin = { path = "./crates/nu-plugin", optional = true, version = "0.76.1" }
#nu-pretty-hex = { path = "./crates/nu-pretty-hex", version = "0.76.1" }
nu-protocol = { path = "./crates/nu-protocol", version = "0.76.1" }
nu-system = { path = "./crates/nu-system", version = "0.76.1" }
#nu-table = { path = "./crates/nu-table", version = "0.76.1" }
#nu-term-grid = { path = "./crates/nu-term-grid", version = "0.76.1" }
nu-utils = { path = "./crates/nu-utils", version = "0.76.1" }

reedline = { version = "0.16.0", features = ["bashisms", "sqlite"] }

rayon = "1.6.1"
is_executable = "1.0.1"
simplelog = "0.12.0"
time = "0.3.12"

signal-hook = { version = "0.3.14", default-features = false }
[target.'cfg(target_family = "unix")'.dependencies]
nix = { version = "0.25", default-features = false, features = [
	"signal",
	"process",
	"fs",
	"term",
] }
atty = "0.2"

[dev-dependencies]
nu-test-support = { path = "./crates/nu-test-support", version = "0.76.1" }
tempfile = "3.2.0"
assert_cmd = "2.0.2"
criterion = "0.4"
pretty_assertions = "1.0.0"
serial_test = "1.0.0"
hamcrest2 = "0.3.0"
rstest = { version = "0.16.0", default-features = false }
itertools = "0.10.3"

# Main nu binary
[[bin]]
name = "nu"
path = "src/main.rs"
